# FluxState

./: CMakeLists.txt  README.md  setup.py
bindings/: __init__.py
bindings/python/: __init__.py  flux_fsm_ctypes.py
doc/: api-reference.md  design.md  roadmap.md
examples/: basic_python_example.py
examples/basic/: CMakeLists.txt  basic_fsm.c
include/: flux_fsm.h  flux_fsm_config.h  flux_fsm_core.h  flux_fsm_event.h  flux_fsm_log.h  flux_fsm_perf.h  flux_fsm_viz.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  flux_fsm_core.c
src/log/: CMakeLists.txt  flux_fsm_log.c
src/tools/: CMakeLists.txt  flux_fsm_perf.c  flux_fsm_viz.c
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_fsm.c
tests/tools/: CMakeLists.txt  test_perf.c
